FireAlarmApplication.Web/mtg_debug_20260127_163332.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:33:32
NetCDF: C:\Users\kubil\AppData\Local\Temp\293fb6b0-0aba-4c61-a8a6-22528cc8a220.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
